--- a/framework/Web/ThingsGateway.Admin.Blazor/Components/SysSignalR.razor
+++ b/framework/Web/ThingsGateway.Admin.Blazor/Components/SysSignalR.razor
@@ -14,7 +14,7 @@
 @namespace ThingsGateway.Admin.Blazor
 @using Microsoft.AspNetCore.SignalR.Client;
 @using ThingsGateway.Admin.Application;
-
+@implements IAsyncDisposable;
 @code {
     HubConnection _hubConnection;
 
@@ -32,6 +32,7 @@
             await _hubConnection.DisposeAsync();
         }
     }
+
     /// <inheritdoc/>
     protected override async Task OnAfterRenderAsync(bool firstRender)
     {
