--- a/framework/Plugin/ThingsGateway.Plugin.OPCUA/Page/OPCUAClientDebugPage.razor
+++ b/framework/Plugin/ThingsGateway.Plugin.OPCUA/Page/OPCUAClientDebugPage.razor
@@ -53,16 +53,23 @@
                  写入
              </MButton>
 
-             <MButton Class="mx-1 my-3" Color="accent" OnClick="()=>IsShowImportVariableList=!IsShowImportVariableList">
-                 <span>查看OPC节点空间</span>
-             </MButton>
+
 
          </div>
+        <div class="my-1 ml-2">
 
+             <MRow  Align="AlignTypes.Center" >
 
+             <MCheckbox HideDetails="@("auto")"  @bind-Value=IsShowSubvariable Dense Label="是否显示子变量"/>
+             
+             <MButton Class="mx-1" Color="accent" OnClick="()=>IsShowImportVariableList=!IsShowImportVariableList">
+                 <span>查看OPC节点空间</span>
+             </MButton>
+            </MRow>
+         </div>
 
          <MCol Class="my-1 py-1">
-             <MRow NoGutters>
+             <MRow  Align="AlignTypes.Center">
 
 
 
@@ -115,7 +122,7 @@
     <ChildContent>
         @if (IsShowImportVariableList)
         {
-            <OPCUAImportVariable @ref=ImportVariable PLC="_plc"></OPCUAImportVariable>
+            <OPCUAImportVariable @ref=ImportVariable PLC="_plc" IsShowSubvariable=IsShowSubvariable></OPCUAImportVariable>
         }
     </ChildContent>
 
@@ -127,5 +134,5 @@
 
     @code {
     private readonly List<(string Code, string Language)> _sections = new();
-
+    private bool IsShowSubvariable;
 }
