--- a/framework/gateway/ThingsGateway.Gateway.Blazor/Page/DeviceVariableRunTimePage.razor
+++ b/framework/gateway/ThingsGateway.Gateway.Blazor/Page/DeviceVariableRunTimePage.razor
@@ -135,7 +135,7 @@ else
                             </td>
                             <td class="text-start ">
                                 <div style="word-break:break-all; white-space:pre-wrap;">
-                                    @(_serviceScope.ServiceProvider.GetService<CollectDeviceService>().GetNameById(context.Item2.ToLong()))
+                                    @(_serviceScope.ServiceProvider.GetService<ICollectDeviceService>().GetNameById(context.Item2.ToLong()))
                                 </div>
                             </td>
                         </tr>
